// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildReport > astro: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced image under the public directory may be linked from outside this repository",
    },
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a dependency directory named 'node_modules'",
      },
    ],
    "notExercised": [
      {
        "mechanism": "serving-root-detection",
        "why": "the project declared its serving roots, so nothing had to infer them; a run that infers them can reach different files",
      },
      {
        "mechanism": "probe",
        "why": "the run did not measure any asset, so oversized and format-opportunity findings could not be produced",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "asset": "public/never-used.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 0,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 7,
    },
    "byConfidence": {
      "certain": 1,
      "high": 6,
      "medium": 0,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 7,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 2,
      "project-root": 0,
      "serving-root": 5,
      "speculative-root": 0,
    },
    "classificationBounds": [],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 83761,
    "assets": 7,
    "findings": {
      "broken": 0,
      "dead": 1,
      "duplicate": 0,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 7,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 6,
    "references": 7,
    "savingQuality": {},
    "sourceFiles": 5,
    "unmeasuredAssets": 0,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 7,
}
`;

exports[`buildReport > astro: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured: images were not decoded (--no-probe)

  scanned 5 source files and found 7 images, 83.8 KB in total
  7 of 7 references resolved, pointing at 6 of those images
  1 image with no reference Upfly could follow

Nothing was skipped.

Findings: 1 item

  unreferenced images (1)
    public/never-used.png  70 B

Worth knowing

  1 unreferenced image under the public directory may be linked from outside this repository
  assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none
  images were not decoded, so oversized assets and format opportunities are unknown
"
`;

exports[`buildReport > eleventy, with no serving root found: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
    {
      "code": "unscanned-extensions",
      "count": 2,
      "detail": [
        ".njk: 2 files",
      ],
      "message": "1 file type had no adapter, so 2 files went unread",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a dependency directory named 'node_modules'",
      },
    ],
    "notExercised": [
      {
        "mechanism": "probe",
        "why": "the run did not measure any asset, so oversized and format-opportunity findings could not be produced",
      },
    ],
    "servingRoots": {
      "declared": false,
      "dirs": [],
    },
    "unscannedExtensions": [
      {
        "ext": ".njk",
        "fileCount": 2,
      },
    ],
    "unscannedFileCount": 2,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "checkable": 10,
      "kind": "serving-root-unknown",
      "linked": 0,
      "suppressed": [
        {
          "file": "src/css/site.css",
          "line": 2,
          "rawPath": "/img/texture.png",
          "where": "src/css/site.css:2",
        },
        {
          "file": "src/css/site.css",
          "line": 8,
          "rawPath": "/img/diagram.png",
          "where": "src/css/site.css:8",
        },
        {
          "file": "src/css/site.css",
          "line": 8,
          "rawPath": "/img/inline.png",
          "where": "src/css/site.css:8",
        },
        {
          "file": "src/css/site.css",
          "line": 12,
          "rawPath": "/img/diagram.png",
          "where": "src/css/site.css:12",
        },
        {
          "file": "src/posts/first.md",
          "line": 5,
          "rawPath": "/img/diagram.png",
          "where": "src/posts/first.md:5",
        },
        {
          "file": "src/posts/first.md",
          "line": 9,
          "rawPath": "/img/inline.png",
          "where": "src/posts/first.md:9",
        },
        {
          "file": "src/posts/second.md",
          "line": 8,
          "rawPath": "/img/diagram.png",
          "where": "src/posts/second.md:8",
        },
        {
          "file": "src/posts/second.md",
          "line": 11,
          "rawPath": "/img/diagram.png",
          "where": "src/posts/second.md:11",
        },
        {
          "file": "src/posts/second.md",
          "line": 11,
          "rawPath": "/img/inline.png",
          "where": "src/posts/second.md:11",
        },
        {
          "file": "src/posts/second.md",
          "line": 11,
          "rawPath": "/img/inline.png",
          "where": "src/posts/second.md:11",
        },
      ],
      "suppressedBroken": 10,
    },
    {
      "file": "src/posts/second.md",
      "kind": "broken",
      "line": 17,
      "rawPath": "../img/missing-on-purpose.png",
      "where": "src/posts/second.md:17",
    },
    {
      "asset": "src/img/unused.png",
      "bytes": 70,
      "inPublicDir": false,
      "kind": "dead",
    },
    {
      "asset": "src/img/diagram.png",
      "bytes": 71744,
      "evidence": [
        {
          "asset": "src/img/diagram.png",
          "quote": "/img/diagram.png",
          "source": "unresolved-reference",
          "where": "src/css/site.css:12",
        },
        {
          "asset": "src/img/diagram.png",
          "quote": "/img/diagram.png",
          "source": "unresolved-reference",
          "where": "src/css/site.css:8",
        },
        {
          "asset": "src/img/diagram.png",
          "quote": "/img/diagram.png",
          "source": "unresolved-reference",
          "where": "src/posts/first.md:5",
        },
        {
          "asset": "src/img/diagram.png",
          "quote": "/img/diagram.png",
          "source": "unresolved-reference",
          "where": "src/posts/second.md:11",
        },
        {
          "asset": "src/img/diagram.png",
          "quote": "/img/diagram.png",
          "source": "unresolved-reference",
          "where": "src/posts/second.md:8",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/favicon.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/favicon.png",
          "quote": "favicon.png",
          "source": "unscanned-file",
          "where": "src/_includes/base.njk:4",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/hero.jpg",
      "bytes": 12557,
      "evidence": [
        {
          "asset": "src/img/hero.jpg",
          "quote": "hero.jpg",
          "source": "unscanned-file",
          "where": "src/index.njk:6",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/inline.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/inline.png",
          "quote": "/img/inline.png",
          "source": "unresolved-reference",
          "where": "src/css/site.css:8",
        },
        {
          "asset": "src/img/inline.png",
          "quote": "/img/inline.png",
          "source": "unresolved-reference",
          "where": "src/posts/first.md:9",
        },
        {
          "asset": "src/img/inline.png",
          "quote": "/img/inline.png",
          "source": "unresolved-reference",
          "where": "src/posts/second.md:11",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/logo.png",
      "bytes": 7195,
      "evidence": [
        {
          "asset": "src/img/logo.png",
          "quote": "logo.png",
          "source": "unscanned-file",
          "where": "src/index.njk:5",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/templated.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/templated.png",
          "quote": "{{ site.url }}/img/templated.png",
          "source": "unresolved-reference",
          "where": "src/posts/first.md:7",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/texture.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/texture.png",
          "quote": "/img/texture.png",
          "source": "unresolved-reference",
          "where": "src/css/site.css:2",
        },
      ],
      "inPublicDir": false,
      "kind": "possibly-dead",
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 1,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 11,
    },
    "byConfidence": {
      "certain": 0,
      "high": 0,
      "medium": 0,
      "unsafe": 12,
    },
    "byResolution": {
      "broken": 11,
      "discarded": 0,
      "dynamic": 1,
      "out-of-scope": 0,
      "resolved": 0,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 0,
      "project-root": 0,
      "serving-root": 0,
      "speculative-root": 0,
    },
    "classificationBounds": [
      {
        "bound": "Of 18 such references, 14 are a parameter, a prop or instance state, which nothing reaches, but 4 are not. Two read an imported module constant, which a module graph would resolve (to an absolute URL); one is a filename from a build-time glob; one is an environment variable the deploy supplies. The first three have an answer we do not compute, so they are misses this reason absorbs. Read as roughly four in five.",
        "count": 1,
        "measuredAgainst": "2026-09-25, on five public repositories: astro-docs, eleventy-docs, shadcn-ui, railsgirls-com and scratch-www. If they or the engine have changed since, this bound has not been re-measured.",
        "reason": "assembled-at-runtime",
      },
    ],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [
      {
        "classification": "correctly-refused",
        "file": "src/posts/first.md",
        "rawPath": "{{ site.url }}/img/templated.png",
        "reason": "contains a Handlebars, Mustache, Vue or Jinja expression: the path is not known statically",
        "refusalReason": "assembled-at-runtime",
        "resolution": "dynamic",
      },
    ],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 91846,
    "assets": 8,
    "findings": {
      "broken": 1,
      "dead": 1,
      "duplicate": 0,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 7,
      "serving-root-unknown": 1,
    },
    "linkedReferences": 0,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 0,
    "references": 12,
    "savingQuality": {},
    "sourceFiles": 5,
    "unmeasuredAssets": 0,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 7,
}
`;

exports[`buildReport > eleventy, with no serving root found: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured: images were not decoded (--no-probe)

  scanned 5 source files and found 8 images, 91.8 KB in total
  0 of 12 references resolved, pointing at 0 of those images
  8 images with no reference Upfly could follow
  root-relative paths resolved from the project root: Upfly found no public directory and none was declared

1 reference had no answer to find

  none of these is a path that points at a file: each is built at run time, or
  names something deliberately outside what Upfly indexes

  (the file it was found in, then the path text as written)

  src/posts/first.md  {{ site.url }}/img/templated.png
    dynamic: contains a Handlebars, Mustache, Vue or Jinja expression: the path is not known statically

What the counts above are known to get wrong

  1 classified as "assembled-at-runtime", and:
    Of 18 such references, 14 are a parameter, a prop or instance state, which
    nothing reaches, but 4 are not. Two read an imported module constant,
    which a module graph would resolve (to an absolute URL); one is a filename
    from a build-time glob; one is an environment variable the deploy
    supplies. The first three have an answer we do not compute, so they are
    misses this reason absorbs. Read as roughly four in five.

    measured: 2026-09-25, on five public repositories: astro-docs,
    eleventy-docs, shadcn-ui, railsgirls-com and scratch-www. If they or the
    engine have changed since, this bound has not been re-measured.

Findings: 10 items

  Upfly could not work out where this project serves files from
    0 of 10 root-relative references resolved, so the rest cannot be judged
    10 broken-reference findings are withheld: they are almost certainly this one problem
    declare the directory your site serves from and run again, for example publicDirs: ["src"]
    the withheld references, which a run with that directory declared will check:
      src/css/site.css:2  /img/texture.png
      src/css/site.css:8  /img/diagram.png
      src/css/site.css:8  /img/inline.png
      src/css/site.css:12  /img/diagram.png
      src/posts/first.md:5  /img/diagram.png
      src/posts/first.md:9  /img/inline.png
      src/posts/second.md:8  /img/diagram.png
      src/posts/second.md:11  /img/diagram.png
      src/posts/second.md:11  /img/inline.png
      src/posts/second.md:11  /img/inline.png

  broken references (1): these point at nothing
    src/posts/second.md:17  ../img/missing-on-purpose.png

  unreferenced images (1)
    src/img/unused.png  70 B

  possibly unreferenced (7): each is named somewhere, but not by a reference Upfly could follow

    named in a file no adapter reads; an adapter for that file type would find these (3)
      src/index.njk: 2 assets
        src/img/hero.jpg  12.6 KB
          named in src/index.njk:6: hero.jpg
        src/img/logo.png  7.2 KB
          named in src/index.njk:5: logo.png
      src/_includes/base.njk: 1 asset
        src/img/favicon.png  70 B
          named in src/_includes/base.njk:4: favicon.png

    named by a path Upfly read but could not resolve; those files parse fine (4)
      src/css/site.css: 3 assets
        src/img/diagram.png  71.7 KB
          named in src/css/site.css:12: /img/diagram.png
          named in src/css/site.css:8: /img/diagram.png
          named in src/posts/first.md:5: /img/diagram.png
          named in src/posts/second.md:11: /img/diagram.png
          named in src/posts/second.md:8: /img/diagram.png
        src/img/inline.png  70 B
          named in src/css/site.css:8: /img/inline.png
          named in src/posts/first.md:9: /img/inline.png
          named in src/posts/second.md:11: /img/inline.png
        src/img/texture.png  70 B
          named in src/css/site.css:2: /img/texture.png
      src/posts/first.md: 1 asset
        src/img/templated.png  70 B
          named in src/posts/first.md:7: {{ site.url }}/img/templated.png

Worth knowing

  assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none
  images were not decoded, so oversized assets and format opportunities are unknown
  1 file type had no adapter, so 2 files went unread:
    .njk: 2 files
"
`;

exports[`buildReport > eleventy: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced image under the public directory may be linked from outside this repository",
    },
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
    {
      "code": "unscanned-extensions",
      "count": 2,
      "detail": [
        ".njk: 2 files",
      ],
      "message": "1 file type had no adapter, so 2 files went unread",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a dependency directory named 'node_modules'",
      },
    ],
    "notExercised": [
      {
        "mechanism": "serving-root-detection",
        "why": "the project declared its serving roots, so nothing had to infer them; a run that infers them can reach different files",
      },
      {
        "mechanism": "probe",
        "why": "the run did not measure any asset, so oversized and format-opportunity findings could not be produced",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "src",
      ],
    },
    "unscannedExtensions": [
      {
        "ext": ".njk",
        "fileCount": 2,
      },
    ],
    "unscannedFileCount": 2,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "file": "src/posts/second.md",
      "kind": "broken",
      "line": 17,
      "rawPath": "../img/missing-on-purpose.png",
      "where": "src/posts/second.md:17",
    },
    {
      "asset": "src/img/unused.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
    {
      "asset": "src/img/favicon.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/favicon.png",
          "quote": "favicon.png",
          "source": "unscanned-file",
          "where": "src/_includes/base.njk:4",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/hero.jpg",
      "bytes": 12557,
      "evidence": [
        {
          "asset": "src/img/hero.jpg",
          "quote": "hero.jpg",
          "source": "unscanned-file",
          "where": "src/index.njk:6",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/logo.png",
      "bytes": 7195,
      "evidence": [
        {
          "asset": "src/img/logo.png",
          "quote": "logo.png",
          "source": "unscanned-file",
          "where": "src/index.njk:5",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
    {
      "asset": "src/img/templated.png",
      "bytes": 70,
      "evidence": [
        {
          "asset": "src/img/templated.png",
          "quote": "{{ site.url }}/img/templated.png",
          "source": "unresolved-reference",
          "where": "src/posts/first.md:7",
        },
      ],
      "inPublicDir": true,
      "kind": "possibly-dead",
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 1,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 11,
    },
    "byConfidence": {
      "certain": 0,
      "high": 10,
      "medium": 0,
      "unsafe": 2,
    },
    "byResolution": {
      "broken": 1,
      "discarded": 0,
      "dynamic": 1,
      "out-of-scope": 0,
      "resolved": 10,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 0,
      "project-root": 0,
      "serving-root": 10,
      "speculative-root": 0,
    },
    "classificationBounds": [
      {
        "bound": "Of 18 such references, 14 are a parameter, a prop or instance state, which nothing reaches, but 4 are not. Two read an imported module constant, which a module graph would resolve (to an absolute URL); one is a filename from a build-time glob; one is an environment variable the deploy supplies. The first three have an answer we do not compute, so they are misses this reason absorbs. Read as roughly four in five.",
        "count": 1,
        "measuredAgainst": "2026-09-25, on five public repositories: astro-docs, eleventy-docs, shadcn-ui, railsgirls-com and scratch-www. If they or the engine have changed since, this bound has not been re-measured.",
        "reason": "assembled-at-runtime",
      },
    ],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [
      {
        "classification": "correctly-refused",
        "file": "src/posts/first.md",
        "rawPath": "{{ site.url }}/img/templated.png",
        "reason": "contains a Handlebars, Mustache, Vue or Jinja expression: the path is not known statically",
        "refusalReason": "assembled-at-runtime",
        "resolution": "dynamic",
      },
    ],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 91846,
    "assets": 8,
    "findings": {
      "broken": 1,
      "dead": 1,
      "duplicate": 0,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 4,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 10,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 3,
    "references": 12,
    "savingQuality": {},
    "sourceFiles": 5,
    "unmeasuredAssets": 0,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 7,
}
`;

exports[`buildReport > eleventy: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured: images were not decoded (--no-probe)

  scanned 5 source files and found 8 images, 91.8 KB in total
  10 of 12 references resolved, pointing at 3 of those images
  5 images with no reference Upfly could follow

1 reference had no answer to find

  none of these is a path that points at a file: each is built at run time, or
  names something deliberately outside what Upfly indexes

  (the file it was found in, then the path text as written)

  src/posts/first.md  {{ site.url }}/img/templated.png
    dynamic: contains a Handlebars, Mustache, Vue or Jinja expression: the path is not known statically

What the counts above are known to get wrong

  1 classified as "assembled-at-runtime", and:
    Of 18 such references, 14 are a parameter, a prop or instance state, which
    nothing reaches, but 4 are not. Two read an imported module constant,
    which a module graph would resolve (to an absolute URL); one is a filename
    from a build-time glob; one is an environment variable the deploy
    supplies. The first three have an answer we do not compute, so they are
    misses this reason absorbs. Read as roughly four in five.

    measured: 2026-09-25, on five public repositories: astro-docs,
    eleventy-docs, shadcn-ui, railsgirls-com and scratch-www. If they or the
    engine have changed since, this bound has not been re-measured.

Findings: 6 items

  broken references (1): these point at nothing
    src/posts/second.md:17  ../img/missing-on-purpose.png

  unreferenced images (1)
    src/img/unused.png  70 B

  possibly unreferenced (4): each is named somewhere, but not by a reference Upfly could follow

    named in a file no adapter reads; an adapter for that file type would find these (3)
      src/index.njk: 2 assets
        src/img/hero.jpg  12.6 KB
          named in src/index.njk:6: hero.jpg
        src/img/logo.png  7.2 KB
          named in src/index.njk:5: logo.png
      src/_includes/base.njk: 1 asset
        src/img/favicon.png  70 B
          named in src/_includes/base.njk:4: favicon.png

    named by a path Upfly read but could not resolve; those files parse fine (1)
      src/posts/first.md: 1 asset
        src/img/templated.png  70 B
          named in src/posts/first.md:7: {{ site.url }}/img/templated.png

Worth knowing

  1 unreferenced image under the public directory may be linked from outside this repository
  assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none
  images were not decoded, so oversized assets and format opportunities are unknown
  1 file type had no adapter, so 2 files went unread:
    .njk: 2 files
"
`;

exports[`buildReport > next-app: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced image under the public directory may be linked from outside this repository",
    },
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a dependency directory named 'node_modules'",
      },
    ],
    "notExercised": [
      {
        "mechanism": "serving-root-detection",
        "why": "the project declared its serving roots, so nothing had to infer them; a run that infers them can reach different files",
      },
      {
        "mechanism": "probe",
        "why": "the run did not measure any asset, so oversized and format-opportunity findings could not be produced",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "asset": "public/unreferenced.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 0,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 11,
    },
    "byConfidence": {
      "certain": 1,
      "high": 10,
      "medium": 0,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 11,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 1,
      "project-root": 0,
      "serving-root": 10,
      "speculative-root": 0,
    },
    "classificationBounds": [],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 338489,
    "assets": 10,
    "findings": {
      "broken": 0,
      "dead": 1,
      "duplicate": 0,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 11,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 9,
    "references": 11,
    "savingQuality": {},
    "sourceFiles": 8,
    "unmeasuredAssets": 0,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 7,
}
`;

exports[`buildReport > next-app: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured: images were not decoded (--no-probe)

  scanned 8 source files and found 10 images, 338.5 KB in total
  11 of 11 references resolved, pointing at 9 of those images
  1 image with no reference Upfly could follow

Nothing was skipped.

Findings: 1 item

  unreferenced images (1)
    public/unreferenced.png  70 B

Worth knowing

  1 unreferenced image under the public directory may be linked from outside this repository
  assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none
  images were not decoded, so oversized assets and format opportunities are unknown
"
`;

exports[`buildReport > partial-pattern: matches the approved JSON shape, lossless included 1`] = `
{
  "caveats": [
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
  ],
  "coverage": {
    "excludedRoots": [],
    "notExercised": [
      {
        "mechanism": "serving-root-detection",
        "why": "the project declared its serving roots, so nothing had to infer them; a run that infers them can reach different files",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "asset": "public/banner.png",
      "bytes": 71744,
      "from": "png",
      "kind": "format-opportunity",
      "quality": 80,
      "savedBytes": 63780,
      "savedPercent": 88,
      "to": "webp",
      "wouldBe": 7964,
    },
    {
      "asset": "public/screenshot.png",
      "bytes": 1912,
      "from": "png",
      "kind": "format-opportunity",
      "quality": "lossless",
      "savedBytes": 1692,
      "savedPercent": 88,
      "to": "webp",
      "wouldBe": 220,
    },
    {
      "asset": "public/theme-light.png",
      "bytes": 7195,
      "from": "png",
      "kind": "format-opportunity",
      "quality": 80,
      "savedBytes": 6345,
      "savedPercent": 88,
      "to": "webp",
      "wouldBe": 850,
    },
    {
      "asset": "public/theme-sepia.png",
      "bytes": 10869,
      "from": "png",
      "kind": "format-opportunity",
      "quality": 80,
      "savedBytes": 9739,
      "savedPercent": 89,
      "to": "webp",
      "wouldBe": 1130,
    },
    {
      "asset": "src/inline-logo.jpg",
      "bytes": 12557,
      "from": "jpeg",
      "kind": "format-opportunity",
      "quality": 80,
      "savedBytes": 1925,
      "savedPercent": 15,
      "to": "webp",
      "wouldBe": 10632,
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 0,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 4,
    },
    "byConfidence": {
      "certain": 1,
      "high": 2,
      "medium": 1,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 3,
      "resolved-pattern": 1,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 1,
      "project-root": 0,
      "serving-root": 3,
      "speculative-root": 0,
    },
    "classificationBounds": [],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [],
  },
  "skipped": [
    {
      "reason": "metadata: this file could not be read as an image, so nothing about it could be measured",
      "stage": "measurement",
      "what": "public/theme-not-an-image.png",
    },
    {
      "reason": "webp: this file could not be read as an image, so there is nothing to encode",
      "stage": "measurement",
      "what": "public/theme-not-an-image.png",
    },
  ],
  "staleConversions": [],
  "summary": {
    "assetBytes": 105995,
    "assets": 7,
    "findings": {
      "broken": 0,
      "dead": 0,
      "duplicate": 0,
      "format-opportunity": 5,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 4,
    "potentialSavingBytes": 83481,
    "probed": true,
    "referencedAssets": 7,
    "references": 4,
    "savingQuality": {
      "webp": [
        80,
        "lossless",
      ],
    },
    "sourceFiles": 1,
    "unmeasuredAssets": 1,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 7,
}
`;

exports[`buildReport > plain-html: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "public-dir-dead",
      "count": 2,
      "detail": [],
      "message": "this project is served from its own root, so 2 unreferenced images may be linked from outside this repository, and Upfly cannot confidently call an unreferenced image here safe to remove",
    },
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
  ],
  "coverage": {
    "excludedRoots": [],
    "notExercised": [
      {
        "mechanism": "serving-root-detection",
        "why": "the project declared its serving roots, so nothing had to infer them; a run that infers them can reach different files",
      },
      {
        "mechanism": "probe",
        "why": "the run did not measure any asset, so oversized and format-opportunity findings could not be produced",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "",
      ],
    },
    "unscannedExtensions": [],
    "unscannedFileCount": 0,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "file": "about.html",
      "kind": "broken",
      "line": 10,
      "rawPath": "images/missing-on-purpose.png",
      "where": "about.html:10",
    },
    {
      "asset": "images/never-referenced.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
    {
      "asset": "images/removed.png",
      "bytes": 70,
      "inPublicDir": true,
      "kind": "dead",
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 0,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 11,
    },
    "byConfidence": {
      "certain": 0,
      "high": 10,
      "medium": 0,
      "unsafe": 1,
    },
    "byResolution": {
      "broken": 1,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 10,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 10,
      "project-root": 0,
      "serving-root": 0,
      "speculative-root": 0,
    },
    "classificationBounds": [],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 152483,
    "assets": 11,
    "findings": {
      "broken": 1,
      "dead": 2,
      "duplicate": 0,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 10,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 9,
    "references": 11,
    "savingQuality": {},
    "sourceFiles": 3,
    "unmeasuredAssets": 0,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "version": 7,
}
`;

exports[`buildReport > plain-html: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured: images were not decoded (--no-probe)

  scanned 3 source files and found 11 images, 152.5 KB in total
  10 of 11 references resolved, pointing at 9 of those images
  2 images with no reference Upfly could follow

Nothing was skipped.

Findings: 3 items

  broken references (1): these point at nothing
    about.html:10  images/missing-on-purpose.png

  unreferenced images (2)
    images/never-referenced.png  70 B
    images/removed.png  70 B

Worth knowing

  this project is served from its own root, so 2 unreferenced images may be linked from outside this repository, and Upfly cannot confidently call an unreferenced image here safe to remove
  assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none
  images were not decoded, so oversized assets and format opportunities are unknown
"
`;

exports[`buildReport > vite-react: matches the approved JSON shape 1`] = `
{
  "caveats": [
    {
      "code": "unused-vectors",
      "count": 1,
      "detail": [],
      "message": "1 unreferenced SVG totalling 307 B, not listed: Upfly neither converts nor deletes an SVG, so there is no action to offer. Use --include-unused-svg to see them.",
    },
    {
      "code": "duplicates-not-checked",
      "count": 0,
      "detail": [],
      "message": "assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none",
    },
    {
      "code": "not-probed",
      "count": 0,
      "detail": [],
      "message": "images were not decoded, so oversized assets and format opportunities are unknown",
    },
    {
      "code": "svg-both-ways",
      "count": 2,
      "detail": [],
      "message": "SVG files are counted as images and also left unparsed: one can hold references of its own, and no adapter reads that yet (2 SVGs here)",
    },
  ],
  "coverage": {
    "excludedRoots": [
      {
        "path": "node_modules",
        "reason": "a dependency directory named 'node_modules'",
      },
    ],
    "notExercised": [
      {
        "mechanism": "serving-root-detection",
        "why": "the project declared its serving roots, so nothing had to infer them; a run that infers them can reach different files",
      },
      {
        "mechanism": "probe",
        "why": "the run did not measure any asset, so oversized and format-opportunity findings could not be produced",
      },
    ],
    "servingRoots": {
      "declared": true,
      "dirs": [
        "public",
      ],
    },
    "unscannedExtensions": [
      {
        "ext": ".svg",
        "fileCount": 2,
      },
    ],
    "unscannedFileCount": 2,
  },
  "declined": {
    "assets": null,
    "bytes": 0,
    "count": 0,
  },
  "declinedReferences": {
    "count": 0,
    "references": null,
  },
  "diagnosticsFile": null,
  "findings": [
    {
      "asset": "src/assets/orphan.png",
      "bytes": 70,
      "inPublicDir": false,
      "kind": "dead",
    },
  ],
  "keptOriginals": {
    "assets": [],
    "bytes": 0,
    "count": 0,
  },
  "references": {
    "byClassification": {
      "correctly-refused": 0,
      "missed-with-an-answer": 0,
      "not-a-claim": 0,
      "resolved-with-an-answer": 12,
    },
    "byConfidence": {
      "certain": 2,
      "high": 10,
      "medium": 0,
      "unsafe": 0,
    },
    "byResolution": {
      "broken": 0,
      "discarded": 0,
      "dynamic": 0,
      "out-of-scope": 0,
      "resolved": 12,
      "resolved-pattern": 0,
      "unresolved-alias": 0,
    },
    "byResolvedVia": {
      "file": 5,
      "project-root": 0,
      "serving-root": 7,
      "speculative-root": 0,
    },
    "classificationBounds": [],
    "declinedValues": {
      "byReason": [],
      "count": 0,
      "values": null,
    },
    "discarded": null,
    "discardedCount": 0,
    "leftOut": [],
    "refusalAccuracyIsNotSelfAssessable": true,
    "unsafe": [],
  },
  "skipped": [],
  "staleConversions": [],
  "summary": {
    "assetBytes": 126939,
    "assets": 12,
    "findings": {
      "broken": 0,
      "dead": 1,
      "duplicate": 0,
      "format-opportunity": 0,
      "oversized": 0,
      "possibly-dead": 0,
      "serving-root-unknown": 0,
    },
    "linkedReferences": 12,
    "potentialSavingBytes": 0,
    "probed": false,
    "referencedAssets": 10,
    "references": 12,
    "savingQuality": {},
    "sourceFiles": 5,
    "unmeasuredAssets": 0,
  },
  "unusedVectors": {
    "assets": null,
    "bytes": 307,
    "count": 1,
  },
  "version": 7,
}
`;

exports[`buildReport > vite-react: matches the approved human rendering 1`] = `
"Upfly audit

  savings not measured: images were not decoded (--no-probe)

  scanned 5 source files and found 12 images, 126.9 KB in total
  12 of 12 references resolved, pointing at 10 of those images
  2 images with no reference Upfly could follow
  including 1 unreferenced SVG, 307 B (counted, not listed: Upfly neither converts nor deletes an SVG)

Nothing was skipped.

Findings: 1 item

  unreferenced images (1)
    src/assets/orphan.png  70 B

Worth knowing

  1 unreferenced SVG totalling 307 B, not listed: Upfly neither converts nor deletes an SVG, so there is no action to offer. Use --include-unused-svg to see them.
  assets were not compared byte for byte, so identical copies are unknown; this run reports no duplicates because it looked for none
  images were not decoded, so oversized assets and format opportunities are unknown
  SVG files are counted as images and also left unparsed: one can hold references of its own, and no adapter reads that yet (2 SVGs here)
"
`;
